# OOP_indie_studio_2019

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  FindIrrlicht.cmake  FindSFML.cmake  Makefile  README.md
.github/workflows/: cron.yml  pull-request.yml  push.yml
assets/font/keybinding/: ARCADECLASSIC.xml  karmatic_arcade.xml  karmatic_arcadev2.xml
doc/: Doxyfile  Doxyfile.bak
doc/html/: AI_8hpp.html  AI_8hpp__incl.map  AI_8hpp__incl.md5  AI_8hpp_source.html  Animation_8hpp.html  Animation_8hpp__incl.map  Animation_8hpp__incl.md5  Animation_8hpp_source.html  Blink_8hpp.html  Blink_8hpp__incl.map  Blink_8hpp__incl.md5  Blink_8hpp_source.html  BombStats_8hpp.html  BombStats_8hpp__incl.map  BombStats_8hpp__incl.md5  BombStats_8hpp_source.html  BombTimer_8hpp.html  BombTimer_8hpp__incl.map  BombTimer_8hpp__incl.md5  BombTimer_8hpp_source.html  Bomberman_8hpp.html  Bomberman_8hpp__dep__incl.map  Bomberman_8hpp__dep__incl.md5  Bomberman_8hpp__incl.map  Bomberman_8hpp__incl.md5  Bomberman_8hpp_source.html  BoundingBox_8hpp.html  BoundingBox_8hpp__incl.map  BoundingBox_8hpp__incl.md5  BoundingBox_8hpp_source.html  Breakable_8hpp.html  Breakable_8hpp_source.html  Button_8hpp.html  Button_8hpp__incl.map  Button_8hpp__incl.md5  Button_8hpp_source.html  Collision_8hpp.html  Collision_8hpp_source.html  ComponentArray_8hpp.html  ComponentArray_8hpp__dep__incl.map  (+594 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+61 more)
doc/latex/: AI_8hpp.tex  AI_8hpp__incl.md5  Animation_8hpp.tex  Animation_8hpp__incl.md5  Blink_8hpp.tex  Blink_8hpp__incl.md5  BombStats_8hpp.tex  BombStats_8hpp__incl.md5  BombTimer_8hpp.tex  BombTimer_8hpp__incl.md5  Bomberman_8hpp.tex  Bomberman_8hpp__dep__incl.md5  Bomberman_8hpp__incl.md5  BoundingBox_8hpp.tex  BoundingBox_8hpp__incl.md5  Breakable_8hpp.tex  Button_8hpp.tex  Button_8hpp__incl.md5  Collision_8hpp.tex  ComponentArray_8hpp.tex  ComponentArray_8hpp__dep__incl.md5  ComponentArray_8hpp__incl.md5  ComponentManager_8hpp.tex  ComponentManager_8hpp__dep__incl.md5  ComponentManager_8hpp__incl.md5  Core_8hpp.tex  Core_8hpp__incl.md5  CountDown_8hpp.tex  CountDown_8hpp__incl.md5  Def_8hpp.tex  Def_8hpp__dep__incl.md5  Def_8hpp__incl.md5  Delay_8hpp.tex  Delay_8hpp__incl.md5  EntityManager_8hpp.tex  EntityManager_8hpp__dep__incl.md5  EntityManager_8hpp__incl.md5  EventManager_8hpp.tex  EventManager_8hpp__dep__incl.md5  EventManager_8hpp__incl.md5  (+188 more)
libs/: Irrlicht.lib
src/: EventReceiver.cpp  EventReceiver.hpp  GameLoop.cpp  GameLoop.hpp  main.cpp
src/Core/: Core.cpp  Core.hpp
src/MapGenerator/: MapGenerator.cpp  MapGenerator.hpp
src/core/: Core.cpp  Core.hpp
src/ecs/: AEvent.hpp  ComponentArray.hpp  ComponentManager.hpp  Def.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  EventReceiver.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp  Universe.cpp  Universe.hpp  WorldManager.hpp
src/ecs/component/: AI.cpp  AI.hpp  Animation.cpp  Animation.hpp  Blink.cpp  Blink.hpp  BombStats.cpp  BombStats.hpp  BombTimer.cpp  BombTimer.hpp  BoundingBox.cpp  BoundingBox.hpp  Breakable.cpp  Breakable.hpp  Button.cpp  Button.hpp  Collision.cpp  Collision.hpp  Delay.cpp  Delay.hpp  HitboxDetection.cpp  HitboxDetection.hpp  Image.cpp  Image.hpp  LookingView.cpp  LookingView.hpp  Lootable.cpp  Lootable.hpp  MessageBox.cpp  MessageBox.hpp  Motion.cpp  Motion.hpp  Music.cpp  Music.hpp  Owner.cpp  Owner.hpp  Particle.cpp  Particle.hpp  Player.cpp  Player.hpp  (+42 more)
src/ecs/event/: Input.cpp  Input.hpp  Key.cpp  Key.hpp  TimerEnd.cpp  TimerEnd.hpp
src/ecs/system/: AI.cpp  AI.hpp  Animation.cpp  Animation.hpp  Blink.cpp  Blink.hpp  BombTimer.cpp  BombTimer.hpp  BoundingBox.cpp  BoundingBox.hpp  Button.cpp  Button.hpp  Countdown.cpp  Countdown.hpp  ExplosionDelay.cpp  ExplosionDelay.hpp  Image.cpp  Image.hpp  Motion.cpp  Motion.hpp  Movement.cpp  Movement.hpp  Music.cpp  Music.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  Render.cpp  Render.hpp  Shrink.cpp  Shrink.hpp  Size.cpp  Size.hpp  Sliding.cpp  Sliding.hpp  Sound.cpp  Sound.hpp  Spinner.cpp  Spinner.hpp  (+8 more)
src/irrlicht/: GUIColorPicker.cpp  GUIColorPicker.hpp  vector3df.cpp
src/map-generator/: MapGenerator.cpp  MapGenerator.hpp
src/map_generator/: MapGenerator.cpp  MapGenerator.hpp
src/scene/: Bomberman.cpp  Bomberman.hpp  CountDown.cpp  CountDown.hpp  DrawScreen.cpp  DrawScreen.hpp  GameHud.cpp  GameHud.hpp  HowToPlay.cpp  HowToPlay.hpp  Keybinding.cpp  Keybinding.hpp  LoadingMenu.cpp  LoadingMenu.hpp  Menu.cpp  Menu.hpp  Pause.cpp  Pause.hpp  PlayerSelector.cpp  PlayerSelector.hpp  Settings.cpp  Settings.hpp  WinScreen.cpp  WinScreen.hpp
test_irrlicht/: CMakeLists.txt
test_irrlicht/src/: main.cpp  main_collision.cpp  mainu.cpp  particle.cpp  test.cpp  wow.cpp
tests/ecs/: SystemTest.hpp  TestsComponentArray.cpp  TestsComponentManager.cpp  TestsEntityManager.cpp  TestsSystem.cpp  TestsSystemManager.cpp  TestsWorldManager.cpp
uml/: Architecture.puml
